--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.10.5
+  firebase_auth: ^3.3.3
+  fluttertoast: ^8.0.8
+  cloud_firestore: ^3.1.0
   get: ^4.3.8
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -40,7 +47,7 @@ dev_dependencies:
 flutter:
 
   # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
+  # included with your applfication, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
