--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^3.3.3
   fluttertoast: ^8.0.8
   cloud_firestore: ^3.1.0
+  shared_preferences: ^2.0.13
   get: ^4.3.8
 
 
